# nts

./: README.md  arguments-init.yaml  arguments.yaml  cli.py  note-init.py  note.py  pyproject.toml
docs/: README.md
docs/argument_parse/: README.md
nts/: arguments.yaml  journal.py  nts.py
nts/argument_parse/: collect.py
tests/: test_initial_test.py
