[tool.poetry]
name = "nts"
version = "0.1.0"
description = "Note To Self"
authors = ["JP Etcheber <jetcheber@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
yaml2 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
